fix: Scrollbar

--- a/src/style/common.less
+++ b/src/style/common.less
@@ -40,32 +40,6 @@
   z-index: -1;
 }
 
-// 滚动条的宽度
-.menu::-webkit-scrollbar {
-  width: 7px;
-  height: 7px;
-}
-
-// 滚动条的设置
-.menu::-webkit-scrollbar-thumb {
-  background-color: rgba(144, 147, 153, 0.44);
-  border-radius: 2em;
-  -webkit-border-radius: 2em;
-  -moz-border-radius: 2em;
-  background-clip: padding-box;
-}
-
-// 滚动条鼠标移上去
-.menu::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(144, 147, 153, 0.58);
-}
-
-// 滚动条凹槽的颜色, 还可以设置边框属性
-// 整个滚动条的背景色
-.menu::-webkit-scrollbar-track-piece {
-  background-color: #001529;
-}
-
 .loop(@i) when (@i <= 40) {
   .mt-@{i} {
     margin-top: @i + 0px;
